.xmonad/xmonad.errors

xmonad.hs:24:1: error:
    Could not find module ‘Data.Tuple.Extra’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
24 | import qualified Data.Tuple.Extra as TE
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
